<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/videoFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <FrameLayout
                android:id="@+id/toggleToolbarFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp">

                <ProgressBar
                    android:id="@+id/connectionSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/toolbar_layout_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.02"
                    android:text="@string/video_ready_to_connect_label"
                    android:textColor="@color/connect_black"
                    android:textSize="30sp"
                    android:layout_gravity="center"/>

                <!--<com.medtronic.mcms.connectandroid.customview.ButtonBarLayout
                    android:id="@+id/button_bar_element"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp">
                </com.medtronic.mcms.connectandroid.customview.ButtonBarLayout>-->

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/call_overlay_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/connect_light"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/incoming_title_text"
                android:layout_width="match_parent"
                android:layout_height="146.7dp"
                android:paddingTop="64dp"
                android:textSize="40sp"
                android:textColor="@color/connect_light"
                android:lineSpacingExtra="13.3sp"
                android:gravity="center_horizontal"
                android:text="@string/incoming_video_call_text"
                android:background="@color/connect_dark" />

            <LinearLayout
                android:id="@+id/call_info_layout"
                android:layout_width="wrap_content"
                android:layout_height="330dp"
                android:layout_below="@+id/incoming_title_text"
                android:orientation="vertical"
                android:paddingLeft="42dp"
                android:paddingRight="42dp"
                android:paddingTop="100dp"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/caller_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/connect_dark"
                    android:textSize="48sp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/client_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.02"
                    android:text=""
                    android:layout_gravity="center"
                    android:textColor="@color/connect_dark"
                    android:textSize="40sp" />
                <TextView
                    android:id="@+id/cancel_action_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.02"
                    android:text="@string/cancel_action_text_placeholder"
                    android:textColor="@color/connect_error"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/call_info_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decline_button"
                    android:layout_width="173.3dp"
                    android:layout_height="213.3dp"
                    android:radius="3.3dp"
                    android:background="@color/connect_error"
                    android:text="@string/decline"
                    android:textColor="@color/connect_light"
                    android:textSize="32sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/accept_button"
                        android:layout_width="280dp"
                        android:layout_height="213.3dp"
                        android:layout_marginStart="40dp"
                        android:background="@color/connect_accept"
                        android:text="@string/accept"
                        android:textColor="@color/connect_light"
                        android:textSize="32sp"/>
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/logo_view"
                android:layout_width="173.3dp"
                android:layout_height="56dp"
                android:layout_below="@id/button_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="66.7dp"
                android:src="@drawable/about_icon" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>